--- a/src/main/resources/informe-LaTex/Qsim.sty
+++ b/src/main/resources/informe-LaTex/Qsim.sty
@@ -41,11 +41,9 @@
 
 \newcommand{\graf}[3][\textwidth]{
 \begin{figure}[h]
-\begin{center}
-\includegraphics[width=#1]{#2}
+\centerline{\includegraphics[width=#1]{#2}}
 \caption{#3}
 \label{#2}
-\end{center}
 \end{figure}}
 
 \newcommand{\tabla}[3]{
