trabajo a futuro: push y pop

--- a/src/main/resources/informe-LaTex/evaluacion-desarrollo.tex
+++ b/src/main/resources/informe-LaTex/evaluacion-desarrollo.tex
@@ -322,11 +322,12 @@ En esta sección se describirán características y funcionalidades que deseamos
 
 \begin{itemize}
 
-\item Incorporar las instrucciones PUSH y POP.
+\item Habilitar las instrucciones PUSH y POP.
 
-Estas instrucciones permiten tener un mejor manejo de la Pila. 
+Estas instrucciones permiten el manejo de la Pila como estructura de datos disponible para el programador. 
 PUSH tiene como efecto agregar el valor del operando origen a la pila. 
 POP permite sacar el primer elemento de la pila y guardarlo en el operando destino.
+Actualmente estas instrcucciones se encuentran implementadas pero no habilitadas en ninguna gramática Qi.
 
 \item Entrada y Salida.
 
