--- a/src/main/resources/informe-LaTex/erroresComunes.tex
+++ b/src/main/resources/informe-LaTex/erroresComunes.tex
@@ -6,12 +6,14 @@
 
 \item Enfoquemonos en esta situación, que pasaría si un alumno escribe el siguiente programa Qi:
 
-1.ADD R0, 0x0002 \\
-2.MUL R4, 0x01\\
-3.SUB R5, 0x000A\\
-4.MOV R5, 0x0056\\
-5.MOV R2, R3\\
-6.ADD R1, R7\\
+\begin{verbatim}
+ADD R0, 0x0002
+MUL R4, 0x01
+SUB R5, 0x000A
+MOV R5, 0x0056
+MOV R2, R3
+ADD R1, R7
+\end{verbatim}
 
 En la linea numero 2 el modo de direccionamiento inmediato esta incompleto, (le faltan dos dígitos). Cuando el alumno quiera ensamblar este programa, el ensamblador detectara este error y en la pantalla recibirá el error descriptivo como el siguiente:
  
@@ -19,9 +21,11 @@ En la linea numero 2 el modo de direccionamiento inmediato esta incompleto, (le 
 
 \item Otra situación seria si un alumno escribe el siguiente programa Qi:\\
 
-1.MOV 0x0006, 0x0056\\
-2.ADD R2, R3\\
-3.SUB R1, R7\\
+\begin{verbatim}
+MOV 0x0006, 0x0056
+ADD R2, R3
+SUB R1, R7
+\end{verbatim}
 
 En la linea numero 1 el operando destino es inmediato lo cual es invalido\footnote{El operando nunca puede tener como modo de direccionamiento un inmediato}. Cuando el alumno quiera ensamblar este programa, el ensamblador detectara este error y en la pantalla recibirá el error descriptivo como el siguiente:
 
@@ -29,8 +33,10 @@ En la linea numero 1 el operando destino es inmediato lo cual es invalido\footno
 
 \item Una situación peculiar puede ser si un alumno escribe el siguiente programa Q1:\\
 
-1.ADD R0, [0x0002] \\
-2.MOV R4, R0\\
+\begin{verbatim}
+1.ADD R0, [0x0002]
+2.MOV R4, R0
+\end{verbatim}
 
 En la linea numero 1 el operando destino es directo lo cual es invalido en Q1\footnote{El modo de direccionamiento no es parte de Q1}. Cuando el alumno quiera ensamblar este programa, el ensamblador detectara este error y en la pantalla recibirá el error descriptivo como el siguiente:
 
@@ -38,8 +44,10 @@ En la linea numero 1 el operando destino es directo lo cual es invalido en Q1\fo
 
 \item Una situación peculiar puede ser si un alumno escribe el siguiente programa Qi:\\
 
-1.CMP R3, [0xA000] \\
-2.MOV R4 R0 \\
+\begin{verbatim}
+CMP R3, [0xA000]
+MOV R4 R0 
+\begin{verbatim}
 
 En la linea numero 2 entre los operandos no se encuentra la coma que los separa, eso es invalido\footnote{las instrucciones de dos operandos tiene que tener la coma para separarlos}. Cuando el alumno quiera ensamblar este programa, el ensamblador detectara este error y en la pantalla recibirá el error descriptivo como el siguiente:
 
@@ -47,8 +55,10 @@ En la linea numero 2 entre los operandos no se encuentra la coma que los separa,
 
 \item Algo común que podría ocurrir es si un alumno escribe el siguiente programa Qi:\\
 
-1.sub [[0x0004]], [0xA000] \\
-2.ADD R4, R0 \\
+\begin{verbatim}
+sub [[0x0004]], [0xA000]
+ADD R4, R0
+\end{verbatim}
 
 En la linea numero 1 la instrucción sub se escribió en minúscula esto es invalido\footnote{Los nombres de las instrucciones son estrictamente en mayúscula}. Cuando el alumno quiera ensamblar este programa, el ensamblador detectara este error y en la pantalla recibirá el error descriptivo como el siguiente:
 
@@ -56,8 +66,10 @@ En la linea numero 1 la instrucción sub se escribió en minúscula esto es invalid
 
 \item veamos que pasa si un alumno escribe el siguiente programa Qi:\\
 
-1.MUL [R6], r4 \\
-2.ADD [0xF0F0], R0 \\
+\begin{verbatim}
+MUL [R6], r4
+ADD [0xF0F0], R0
+\end{verbatim}
 
 En la linea numero 1 el operando destino es un registro que empieza con minúscula, esto es invalido\footnote{Los registros empiezan estrictamente con Mayúscula}. Cuando el alumno quiera ensamblar este programa, el ensamblador detectara este error y en la pantalla recibirá el error descriptivo como el siguiente:
 
@@ -65,8 +77,10 @@ En la linea numero 1 el operando destino es un registro que empieza con minúscul
 
 \item Otra situación que se podría dar es si un alumno escribe el siguiente programa Qi:\\
 
-1.AND R2, R8 \\
-2.OR [0xF0F0], R0 \\
+\begin{verbatim}
+AND R2, R8
+OR [0xF0F0], R0
+\end{verbatim}
 
 En la linea numero 1 el operando destino el numero del registro es invalido\footnote{Los registros están en el rango R0..R7, por lo tanto R8 no pertenece al rango por eso es invalido}. Cuando el alumno quiera ensamblar este programa, el ensamblador detectara este error y en la pantalla recibirá el error descriptivo como el siguiente:
 
@@ -74,8 +88,10 @@ En la linea numero 1 el operando destino el numero del registro es invalido\foot
 
 \item Este es un error de concepto que se le puede escapar a los alumnos, que pasa si un alumno escribe el siguiente programa Qi:\\
 
-1.MUL R7, R4 \\
-2.AND R5, [R3] \\
+\begin{verbatim}
+MUL R7, R4
+AND R5, [R3]
+\end{verbatim}
 
 En la linea numero 1 cuando uno escribe la instrucción MUL no es valido utilizar como destino el registro numero 7 por lo tanto es invalida\footnote{El resultado de la multiplicación se parte en 2. La primer parte va a R7 y la segunda parte va al operando destino, no pueden ser los mismo porque si no se perdería una parte del resultado.} esa linea. Cuando el alumno quiera ensamblar este programa, el ensamblador detectara este error y en la pantalla recibirá el error descriptivo como el siguiente:
 
@@ -83,9 +99,11 @@ En la linea numero 1 cuando uno escribe la instrucción MUL no es valido utilizar
 
 \item Este es otro error que se les puede escapar a los alumnos, que pasa si un alumno escribe el siguiente programa Qi:\\
 
-1.inicio: MUL R7, R4 \\
-2.AND R5, [R3] \\
-3.JMP incio \\
+\begin{verbatim}
+inicio: MUL R7, R4
+AND R5, [R3]
+JMP incio
+\end{verbatim}
 
 En la linea numero 3 cuando uno escribe una instrucción utilizando etiquetas no es correcto escribir el nombre incompleto de la etiqueta, por eso es invalido. Cuando el alumno quiera ensamblar este programa, el ensamblador detectara este error y en la pantalla recibirá el error descriptivo como el siguiente:
 
@@ -93,9 +111,11 @@ En la linea numero 3 cuando uno escribe una instrucción utilizando etiquetas no 
 
 \item Otro error con etiquetas, que pasa si un alumno escribe el siguiente programa Qi:\\
 
-1.MOV [0x0005], etiq \\
-2.CALL [0x0005] \\
-3.etiqueta: ADD R0, 0x0002 \\
+\begin{verbatim}
+MOV [0x0005], etiq
+CALL [0x0005]
+etiqueta: ADD R0, 0x0002
+\end{verbatim}
 
 En la linea numero 1 ocurre el mismo error antes mencionado donde el nombre de la etiqueta esta incompleto, esta situación es distinta ya que en la anterior uno define primero la etiqueta y luego se utiliza, acá es alreves primero se utiliza en la linea 1 y luego se define en la linea 3. Cuando el alumno quiera ensamblar este programa, el ensamblador detectara este error y en la pantalla recibirá el error descriptivo como el siguiente:
 
@@ -104,9 +124,11 @@ En la linea numero 1 ocurre el mismo error antes mencionado donde el nombre de l
 
 \item Relacionado con las etiquetas puede pasa que se olviden de algún símbolo, que pasa si un alumno escribe el siguiente programa Qi:\\
 
-1.inicio SUB [0x9000], R4 \\
-2.MUL R5, [R7] \\
-3.JMP inicio \\
+\begin{verbatim}
+inicio SUB [0x9000], R4
+MUL R5, [R7]
+JMP inicio
+\end{verbatim}
 
 En la linea numero 1 la etiqueta inicio no es una etiqueta valida\footnote{Las etiquetas pueden empezar con mayúscula o minúscula pero al final siempre tienen que tener (:).}. Cuando el alumno quiera ensamblar este programa, el ensamblador detectara este error y en la pantalla recibirá el error descriptivo como el siguiente:
 
@@ -115,8 +137,10 @@ En la linea numero 1 la etiqueta inicio no es una etiqueta valida\footnote{Las e
 
 \item Esto es un error de concepto, que pasa si un alumno escribe el siguiente programa Qi :\\
 
-1.ADD [0x9000], R4 \\
-2.NOT 0x0004 \\
+\begin{verbatim}
+ADD [0x9000], R4
+NOT 0x0004
+\end{verbatim}
 
 En la linea numero 2 el operando destino de la instrucción NOT no puede ser un inmediato, esto es invalido\footnote{La instrucción NOT no puede recibir un inmediato como destino porque necesita guardar el efecto que genera y un inmediato es una constante.}. Cuando el alumno quiera ensamblar este programa, el ensamblador detectara este error y en la pantalla recibirá el error descriptivo como el siguiente:
 
@@ -124,8 +148,10 @@ En la linea numero 2 el operando destino de la instrucción NOT no puede ser un i
 
 \item Esto es un error que se les puede escarpar, que pasa si un alumno escribe el siguiente programa Qi :\\
 
-1.ADD [9000], R4 \\
-2.NOT R2 \\
+\begin{verbatim}
+ADD [9000], R4
+NOT R2
+\end{verbatim}
 
 En la linea numero 1 el operando destino no tiene el prefijo 0x por lo tanto es una expresión invalida. Cuando el alumno quiera ensamblar este programa, el ensamblador detectara este error y en la pantalla recibirá el error descriptivo como el siguiente:
 
@@ -133,8 +159,10 @@ En la linea numero 1 el operando destino no tiene el prefijo 0x por lo tanto es 
 
 \item Una cosa interesante puede ocurrir que pasa si un alumno escribe el siguiente programa Qi :\\
 
-1.ADD [0x900000000000], R4 \\
-2.NOT R2 \\
+\begin{verbatim}
+ADD [0x900000000000], R4
+NOT R2
+\end{verbatim}
 
 En la linea numero 1 el operando destino tiene mas dígitos que los permitidos, por esto es invalido\footnote{Un inmediato tiene el prefijo 0x y luego 4 dígitos hexadecimales.}. Cuando el alumno quiera ensamblar este programa, el ensamblador detectara este error y en la pantalla recibirá el error descriptivo como el siguiente:
 
@@ -142,8 +170,10 @@ En la linea numero 1 el operando destino tiene mas dígitos que los permitidos, p
 
 \item Esto es un error que se les puede escarpar, que pasa si un alumno escribe el siguiente programa Qi  :\\
 
-1.ZDD [0x900000000000], [R5] \\
-2.NOT R2 \\
+\begin{verbatim}
+ZDD [0x900000000000], [R5]
+NOT R2
+\end{verbatim}
 
 En la linea numero 1 el nombre de la operación es invalida\footnote{Ese nombre es invalido porque no es parte del conjunto de instrucciones, no existe la instrucción ZDD.}. Cuando el alumno quiera ensamblar este programa, el ensamblador detectara este error y en la pantalla recibirá el error descriptivo como el siguiente:
 
@@ -151,7 +181,9 @@ En la linea numero 1 el nombre de la operación es invalida\footnote{Ese nombre e
 
 \item Este error no es tan habitual, que pasa si un alumno escribe el siguiente programa Qi  :\\
 
-1.SUB [], 0x000A \\
+\begin{verbatim}
+SUB [], 0x000A
+\end{verbatim}
 
 En la linea numero 1 el operando destino no contiene su valor, por eso es invalido\footnote{El modo de direccionamiento directo siempre contiene un inmediato como valor.}. Cuando el alumno quiera ensamblar este programa, el ensamblador detectara este error y en la pantalla recibirá el error descriptivo como el siguiente:
 
@@ -159,7 +191,9 @@ En la linea numero 1 el operando destino no contiene su valor, por eso es invali
 
 \item otro error no tan habitual, que pasa si un alumno escribe el siguiente programa Qi  :\\
 
-1.JMP \\
+\begin{verbatim}
+JMP
+\end{verbatim}
 
 En la linea numero 1 el operando origen de la instrucción JMP no existe y por ende es invalido\footnote{Todas las instrucciones son validas si tienen a su operandos, en este caso JMP le falta su operando.}. Cuando el alumno quiera ensamblar este programa, el ensamblador detectara este error y en la pantalla recibirá el error descriptivo como el siguiente:
 
@@ -167,7 +201,9 @@ En la linea numero 1 el operando origen de la instrucción JMP no existe y por en
  
 \item otro error no tan habitual, que pasa si un alumno escribe el siguiente programa Qi  :\\
 
-1.ADD R7, [[]] \\
+\begin{verbatim}
+ADD R7, [[]]
+\end{verbatim}
 
 En la linea numero 1 el valor el operando origen no existe, esto es invalido\footnote{El modo de direccionamiento indirecto necesita su valor inmediato.}. Cuando el alumno quiera ensamblar este programa, el ensamblador detectara este error y en la pantalla recibirá el error descriptivo como el siguiente:
 
